<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MADN3SController</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="example_lower">1</string>
    <string name="example_total">6</string>
    
    <string name="description_arrow_front">Front Arrow</string>
    <string name="description_arrow_left">Left Arrow</string>
    <string name="description_arrow_back">Back Arrow</string>
    <string name="description_arrow_right">Right Arrow</string>
    <string name="description_circle">Circle</string>
    <string name="new_devices">New Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="cameras">Cameras</string>
    <string name="right_camera_label">Right Camera:</string>
    <string name="left_camera_label">Left Camera:</string>
    <string name="cameras_position_designation">Camera Positions</string>
    <string name="nxt">NXT</string>
    <string name="connect">Connect</string>
    <string name="scan">Scan</string>
    <string name="hint_indicator_device_not_connected">Device Not Connected Indicator</string>
    <string name="hint_indicator_device_connected">Device Connected Indicator</string>

    <string name="selected_devices">Selected Devices</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="next">Next</string>
    <string name="error_connect_failed">Connection Failed</string>
    <string name="error_connect_lost">Connection Lost</string>
    
    <string name="calibration">Calibration</string>
    <string name="nxt_action">Sending Signal to NXT</string>
    <string name="right_camera_action">Sending Signal to Camera1</string>
    <string name="left_camera_action">Sending Signal to Camera2</string>
    <string name="scan_progress">Scan progress&#8230; </string>
    
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    
    <string name="project_name">Project Name</string>
    <string name="save">Save</string>
    <string name="generate">Generate Model</string>
    <string name="view">View Model</string>
    
    <string name="scanner">Scanner</string>
    <string name="remote_control">R/C</string>
    <string name="model_gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    
    <string name="text_selected_file">Selected file</string>
    <string name="text_no_file_selected">No file has been selected</string>
    <string name="text_file_name">filename</string>
    <string name="text_no_files">No files or directories</string>
    
    
    <string name="general">General</string>
    <string name="settings_points">Points</string>
    <string name="settings_speed">Speed</string>
    <string name="settings_radius">Radius</string>
    <string name="settings_save">Save</string>
    <string name="settings_iterations">Iterations</string>
    <string name="settings_grabcut">Grab Cut</string>
    <string name="settings_grabcut_rectangle">Rectangle</string>
    <string name="settings_grabcut_rectangle_p1_open">P1 (</string>
    <string name="settings_grabcut_rectangle_p1_x">P1 X</string>
    <string name="settings_grabcut_rectangle_p1_y">P1 Y</string>
    <string name="settings_grabcut_rectangle_p2_open">P2 (</string>
    <string name="settings_grabcut_rectangle_p2_x">P2 X</string>
    <string name="settings_grabcut_rectangle_p2_y">P2 Y</string>
    <string name="settings_good_features">Good Features</string>
    <string name="settings_good_features_max_corners">Max Corners</string>
    <string name="settings_good_features_quality_level">Quality Level</string>
    <string name="settings_good_features_min_distance">Min Distance</string>
    <string name="settings_edge_detection">Edge Detection</string>
    <string name="settings_edge_detection_algorithm">Algorithm</string>
    <string name="settings_edge_detection_canny">Canny</string>
    <string name="settings_edge_detection_canny_lower_threshold">Lower Threshold</string>
    <string name="settings_edge_detection_canny_upper_threshold">Upper Threshold</string>
    <string name="settings_edge_detection_sobel">Sobel</string>
    <string name="settings_edge_detection_sobel_d_depth">Depth</string>
    <string name="settings_edge_detection_sobel_d_x">dx</string>
    <string name="settings_edge_detection_sobel_d_y">dy</string>
    <string name="settings_clean_images">Clean Images</string>
    
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="parenthesis_open">(</string>
    <string name="parenthesis_close">)</string>
    <string name="comma">,</string>
    <string name="slash">/</string>
    
</resources>
