<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/settings_points_linearLayout"
        style="@style/Controller.Scanner.Step" >

        <TextView
            android:id="@+id/points_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/settings_points"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/points_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="38dp"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/settings_save" />

    <RelativeLayout
        android:id="@+id/grabcut_relative_layout"
        style="@style/Controller.Scanner.Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/settings_points_linearLayout"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/grabcut_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/settings_grabcut"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/p1_x_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grabcut_text_view"
            android:text="@string/settings_grabcut_rectangle_p1_x"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/p1_y_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/p1_x_text_edit"
            android:layout_alignBottom="@+id/p1_x_text_edit"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/p1_x_text_edit"
            android:text="@string/settings_grabcut_rectangle_p1_y"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/p1_y_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/p1_y_text_view"
            android:layout_alignBottom="@+id/p1_y_text_view"
            android:layout_toRightOf="@+id/p1_y_text_view"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/p1_x_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/p1_x_text_view"
            android:layout_toRightOf="@+id/p1_x_text_view"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/p2_x_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/p1_x_text_edit"
            android:layout_marginTop="34dp"
            android:text="@string/settings_grabcut_rectangle_p2_x"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/p2_x_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/p2_x_text_view"
            android:layout_toRightOf="@+id/p2_x_text_view"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/p2_y_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/p2_x_text_view"
            android:layout_alignBottom="@+id/p2_x_text_view"
            android:layout_alignLeft="@+id/p1_y_text_view"
            android:text="@string/settings_grabcut_rectangle_p2_y"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/p2_y_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/p2_y_text_view"
            android:layout_toRightOf="@+id/p2_y_text_view"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/iterations_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/p2_x_text_view"
            android:layout_below="@+id/p2_x_text_view"
            android:layout_marginTop="28dp"
            android:text="@string/settings_iterations"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/iterations_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/iterations_text_view"
            android:layout_alignBottom="@+id/iterations_text_view"
            android:layout_alignRight="@+id/p2_y_text_edit"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/iterations_text_view"
            android:ems="10"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        style="@style/Controller.Scanner.Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/grabcut_relative_layout" >

        <TextView
            android:id="@+id/good_fueatures_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_good_features"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/max_corners_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/good_fueatures_text_view"
            android:layout_marginTop="15dp"
            android:text="@string/settings_good_features_max_corners"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/max_corner_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/max_corners_text_view"
            android:layout_toRightOf="@+id/good_fueatures_text_view"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/quality_level_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/quality_level_text_view"
            android:layout_alignRight="@+id/max_corner_text_edit"
            android:layout_toRightOf="@+id/good_fueatures_text_view"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/quality_level_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/max_corner_text_edit"
            android:layout_marginTop="13dp"
            android:text="@string/settings_good_features_quality_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mind_distance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/quality_level_text_view"
            android:layout_below="@+id/quality_level_text_view"
            android:layout_marginTop="26dp"
            android:text="@string/settings_good_features_min_distance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/min_distance_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mind_distance_text_view"
            android:layout_alignBottom="@+id/mind_distance_text_view"
            android:layout_alignLeft="@+id/quality_level_text_edit"
            android:layout_alignRight="@+id/quality_level_text_edit"
            android:ems="10"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/Controller.Scanner.Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_save_button"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="18dp" >

        <TextView
            android:id="@+id/edge_detection_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_edge_detection"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/algorithm_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edge_detection_text_view"
            android:layout_below="@+id/edge_detection_text_view"
            android:layout_marginTop="14dp"
            android:text="@string/settings_edge_detection_algorithm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/algorithm_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/algorithm_text_view"
            android:layout_marginLeft="52dp"
            android:layout_toRightOf="@+id/algorithm_text_view" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/settings_edge_detection_canny" />

       </RadioGroup>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/algorithm_radio_group"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/algorithm_radio_group"
            android:text="@string/settings_edge_detection_sobel" />

        <TextView
            android:id="@+id/lower_threshold_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/algorithm_text_view"
            android:layout_below="@+id/algorithm_radio_group"
            android:layout_marginTop="25dp"
            android:text="@string/settings_edge_detection_canny_lower_threshold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/lower_threshold_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lower_threshold_text_view"
            android:layout_alignBottom="@+id/lower_threshold_text_view"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/edge_detection_text_view"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lower_threshold_edit_text"
            android:layout_marginTop="29dp"
            android:text="@string/settings_edge_detection_canny_upper_threshold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/upper_threshold_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignLeft="@+id/lower_threshold_edit_text"
            android:layout_alignRight="@+id/lower_threshold_edit_text"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/upper_threshold_text_edit"
            android:layout_marginTop="24dp"
            android:text="@string/settings_edge_detection_sobel_d_depth"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/d_depth_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignRight="@+id/edge_detection_text_view"
            android:layout_toRightOf="@+id/algorithm_text_view"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/d_depth_text_edit"
            android:layout_alignBottom="@+id/d_depth_text_edit"
            android:layout_alignLeft="@+id/upper_threshold_text_edit"
            android:text="@string/settings_edge_detection_sobel_d_x"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/d_x_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignRight="@+id/radio1"
            android:layout_marginRight="11dp"
            android:layout_toRightOf="@+id/algorithm_radio_group"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/d_x_text_edit"
            android:layout_alignBottom="@+id/d_x_text_edit"
            android:layout_toRightOf="@+id/d_x_text_edit"
            android:text="@string/settings_edge_detection_sobel_d_y"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/d_y__text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:ems="10"
            android:inputType="number" />

    </RelativeLayout>

</RelativeLayout>