<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/front_arrow_imageView"
        android:layout_width="@dimen/arrow_side"
        android:layout_height="@dimen/arrow_side"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description_arrow_front"
        android:src="@drawable/up_arrow" />

    <LinearLayout
        android:id="@+id/side_arrows_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/front_arrow_imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/left_arrow_imageView"
            android:layout_width="@dimen/arrow_side"
            android:layout_height="@dimen/arrow_side"
            android:layout_gravity="left"
            android:background="@drawable/arrow_left"
            android:contentDescription="@string/description_arrow_left" />

        <!-- <ImageView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:id="@+id/imageView" -->
        <!-- android:src="@drawable/circle"/> -->

        <ImageView
            android:id="@+id/right_arrow_imageView"
            android:layout_width="@dimen/arrow_side"
            android:layout_height="@dimen/arrow_side"
            android:layout_gravity="right"
            android:background="@drawable/arrow_right"
            android:contentDescription="@string/description_arrow_right" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back_arrow_imageView"
        android:layout_width="@dimen/arrow_side"
        android:layout_height="@dimen/arrow_side"
        android:layout_below="@+id/side_arrows_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/arrow_back"
        android:contentDescription="@string/description_arrow_back" />

</RelativeLayout>
