<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/selected_devices"
            android:id="@+id/textView" android:layout_margin="@dimen/container_margin"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nxt"
            android:id="@+id/nxt_device_textView"
            android:background="#FF9900"
            android:padding="@dimen/subtitle_padding" android:textColor="@color/steady_grey"
            android:layout_margin="@dimen/container_margin"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="@dimen/container_margin">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="3">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_name"
                    android:id="@+id/nxt_name_connection_textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/device_address"
                    android:id="@+id/nxt_address_connection_textView"
                    android:layout_marginLeft="@dimen/container_margin"/>
        </LinearLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nxt_not_connected_imageView" 
                android:background="@drawable/indicator_not_connected"
                android:contentDescription="@string/hint_indicator_device_not_connected"
            android:visibility="gone" />
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nxt_connecting_progressBar"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nxt_connected_imageView" 
                android:contentDescription="@string/hint_indicator_device_connected"
                android:background="@drawable/indicator_connected"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/cameras"
            android:labelFor="@+id/camera_devices_layout"
            android:id="@+id/cameras_connection_textView"
            android:padding="@dimen/subtitle_padding"
            android:textColor="@color/route_66"
            android:background="@color/BC" android:layout_margin="@dimen/container_margin"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="@dimen/container_margin">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="3">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_name"
                    android:id="@+id/camera1_name_connection_textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/device_address"
                    android:id="@+id/camera1_address_connection_textView"
                    android:layout_marginLeft="@dimen/container_margin"/>
        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera1_not_connected_imageView" 
                android:background="@drawable/indicator_not_connected"
                android:contentDescription="@string/hint_indicator_device_not_connected"
            	android:visibility="gone" />
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera1_connecting_progressBar"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera1_connected_imageView" 
                android:contentDescription="@string/hint_indicator_device_connected"
                android:background="@drawable/indicator_connected"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_margin="@dimen/container_margin">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_weight="3">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/device_name"
                    android:id="@+id/camera2_name_connection_textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/device_address"
                    android:id="@+id/camera2_address_connection_textView"
                    android:layout_marginLeft="@dimen/container_margin"/>
        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera2_not_connected_imageView" android:background="@drawable/indicator_not_connected"
                android:contentDescription="@string/hint_indicator_device_not_connected"
            android:visibility="gone" />
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera2_connecting_progressBar"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/camera2_connected_imageView" 
                android:contentDescription="@string/hint_indicator_device_connected"
                android:adjustViewBounds="false"
                android:background="@drawable/indicator_connected"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/scan_button" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>